# FreeThawUtil

./: FreThaw1D_gridcreator.py  README.md  oms_table.py  pyproject.toml  simfile.py
doc/: sim_params.md  troubleshooting  troubleshooting.md  usage.md
ftu/: AllVariables.py  FreThaw1D_gridcreator.py  Grid.py  __init__.py  all_variables.py  isotherms.py  oms_table.py  plot_spinup.py  simfile.py
ftu/scripts/: make_grid.py
scripts/: make_grid.py
